syntax="proto3";
option go_package = "./proto";

service RestaurentService {
    // Gets the items
   rpc GetItemsById(ItemIdList) returns (ItemList){}
   rpc GetRestaurentById(RestaurentId) returns (Restaurent) {}
}
message ItemIdList {
    repeated string itemId = 1;
}

message Item {
    string itemId = 1;
    string restaurentId = 2;
    string name = 3;
    string description = 4;
    double price = 5;
}

message ItemList {
    repeated Item item = 1;
}

message RestaurentId {
    string restaurentId  = 1;
}

message Restaurent {
    string restaurentId = 1;
    string name  = 2;
    string ownerId = 3;
}

